# unreal-pokemon

./: .clang-format  .clang-format-ignore  .clang-tidy  .csharpierignore  .csharpierrc  .gitignore  .gitmodules  Directory.Build.props  README.md  UnrealPokemon.uproject  auto-committer.ps1  azure-pipelines.yml  conanfile.txt  cpp-coverage.xml  download-sonar-scanner.ps1  format_all.py  items.json  output.txt  requirements.txt  run-cpp-check.ps1  run_clang_format.ps1  run_clang_format.py  run_tests.ps1  run_tests.py  set-sonar-variables.ps1  sonar-project.properties  static_identifier_generator.py
Plugins/RetroLib/: .clang-format  .gitignore  CMakeLists.txt  RetroLib.uplugin  retrolib.natvis  run_clang_format.py  sonar-project.properties
Plugins/RetroLib/.github/workflows/: auto_build.yml
Plugins/RetroLib/CMake/: EnableStandardLibraryModule.cmake
Plugins/RetroLib/RetroLib/: CMakeLists.txt
Plugins/RetroLib/RetroLib/include/RetroLib/: Compatibility.h  FunctionTraits.h  RetroLibMacros.h  TypeTraits.h
Plugins/RetroLib/RetroLib/include/RetroLib/Casting/: ByteCast.h  ClassCast.h  Convert.h  DynamicCast.h  InstanceOf.h  StaticCast.h
Plugins/RetroLib/RetroLib/include/RetroLib/Concepts/: Comparisons.h  CompleteType.h  Inheritance.h  Iterators.h  OpaqueStorage.h  Operators.h  ParameterPacks.h  Pointers.h  Tuples.h
Plugins/RetroLib/RetroLib/include/RetroLib/Functional/: BindBack.h  BindFront.h  BindFunctor.h  BindMethod.h  CreateBinding.h  ExtensionMethods.h  FunctionalClosure.h  Invoke.h
Plugins/RetroLib/RetroLib/include/RetroLib/Optionals/: AndThen.h  Filter.h  IfPresent.h  IfPresentOrElse.h  IsSet.h  Optional.h  OptionalIterator.h  OptionalOperations.h  OrElse.h  OrElseGet.h  OrElseThrow.h  OrElseValue.h  PtrOrNull.h  To.h  Transform.h  Value.h
Plugins/RetroLib/RetroLib/include/RetroLib/Ranges/: FeatureBridge.h  RangeBasics.h
Plugins/RetroLib/RetroLib/include/RetroLib/Ranges/Algorithm/: AllOf.h  AnyOf.h  FindFirst.h  ForEach.h  NoneOf.h  Reduce.h  To.h
Plugins/RetroLib/RetroLib/include/RetroLib/Ranges/Compatibility/: ForEachRange.h
Plugins/RetroLib/RetroLib/include/RetroLib/Ranges/Concepts/: Concatable.h  Containers.h  Iterable.h
Plugins/RetroLib/RetroLib/include/RetroLib/Ranges/Views/: AnyView.h  CacheLast.h  Concat.h  Elements.h  Enumerate.h  Filter.h  Generator.h  JoinWith.h  NameAliases.h  Transform.h
Plugins/RetroLib/RetroLib/include/RetroLib/Utils/: ForwardLike.h  NonPropagatingCache.h  Operators.h  Polymorphic.h  Tuple.h  UniqueAny.h  Unreachable.h  ValidPtr.h  Variant.h  WrapArg.h
Plugins/RetroLib/RetroLib/src/: RetroLib.ixx  StlMock.ixx
Plugins/RetroLib/Source/RetroLib/: RetroLib.Build.cs  retrolib.natvis
Plugins/RetroLib/Source/RetroLib/Private/: RetroLibModule.cpp
Plugins/RetroLib/Source/RetroLib/Private/RetroLib/Async/: AsyncHelpers.cpp  BlueprintCoroutineActionBase.cpp  Saving.cpp
Plugins/RetroLib/Source/RetroLib/Private/RetroLib/Blueprints/: Properties.cpp  (+1 more)
Plugins/RetroLib/Source/RetroLib/Public/: RetroLib.h  RetroLibModule.h
Plugins/RetroLib/Source/RetroLib/Public/RetroLib/: Assets.h  Async.h  Blueprints.h  Casting.h  Concepts.h  Exceptions.h  FunctionTraits.h  Functional.h  Optionals.h  Ranges.h  RetroLib.ixx  RetroLibMacros.h  TypeTraits.h  Utils.h  Variants.h
Plugins/RetroLib/Source/RetroLibBlueprintNodes/: RetroLibBlueprintNodes.Build.cs
Plugins/RetroLib/Source/RetroLibBlueprintNodes/Private/: RetroLibBlueprintNodes.cpp
Plugins/RetroLib/Source/RetroLibBlueprintNodes/Public/: RetroLibBlueprintNodes.h
Plugins/RetroLib/Source/RetroLibEditor/: RetroLibEditor.Build.cs
Plugins/RetroLib/Source/RetroLibEditor/Private/: RetroLibEditor.cpp
Plugins/RetroLib/Source/RetroLibEditor/Public/: RetroLibEditor.h
Plugins/RetroLib/Source/RetroLibTests/: RetroLibTests.Build.cs
Plugins/RetroLib/Source/RetroLibTests/Private/: RetroLibTests.cpp
Plugins/RetroLib/Source/RetroLibTests/Private/Functional/: TestExtensionMethods.cpp
Plugins/RetroLib/Source/RetroLibTests/Private/FunctionalTesting/: CoroutineFunctionalTest.cpp  ScopedFunctionalTest.cpp  ScopedTimeDilationComponent.cpp
Plugins/RetroLib/Source/RetroLibTests/Private/Optionals/: OptionalIteratorTest.cpp  TestOptionalOperations.cpp
Plugins/RetroLib/Source/RetroLibTests/Private/Utils/: OperatorsTest.cpp  PolymorphicTest.cpp  UniqueAnyTest.cpp
Plugins/RetroLib/Source/RetroLibTests/Public/: RetroLibTests.h  TestAdapter.h
Plugins/RetroLib/Source/RetroLibTests/Public/FunctionalTesting/: CoroutineFunctionalTest.h  ScopedFunctionalTest.h  ScopedTestComponent.h  ScopedTimeDilationComponent.h
Plugins/RetroLib/Source/RetroLibTests/Public/Utilities/: TestStructs.h
Plugins/RetroLib/Tests/: CMakeLists.txt
Plugins/RetroLib/Tests/Casts/: TestCasts.cpp
Plugins/RetroLib/Tests/Functional/: TestBindBack.cpp  TestBindFront.cpp  TestBindMethod.cpp  TestBindings.cpp  TestExtensionMethods.cpp  TestInvoke.cpp
Plugins/RetroLib/Tests/Optionals/: OptionalIteratorTest.cpp  TestFilterOptional.cpp  TestOptional.cpp  TestOptionalOperations.cpp  TestOptionalPipes.cpp
Plugins/RetroLib/Tests/Ranges/Algorithm/: RangesTerminalClosureTest.cpp  RangesToTest.cpp
Plugins/RetroLib/Tests/Ranges/Views/: AnyViewTest.cpp  CacheLastTest.cpp  ConcatViewTest.cpp  GeneratorTest.cpp  TestConstexprAdapters.cpp  TestRangeAdapters.cpp
Plugins/RetroLib/Tests/Utils/: OperatorsTest.cpp  PolymorphicTest.cpp  TestValidPtr.cpp  UniqueAnyTest.cpp
Plugins/Utilities/RetroLib/: CMakeLists.txt  RetroLib.uplugin  conanfile.txt  sonar-project.properties
Plugins/Utilities/RetroLib/CMake/: conan_provider.cmake
Plugins/Utilities/RetroLib/Source/RetroLib/: CMakeLists.txt
Plugins/Utilities/RetroLib/Source/RetroLib/Private/: RetroLibModule.cpp
Plugins/Utilities/RetroLib/Source/RetroLib/Public/: RetroLibModule.h
Plugins/Utilities/RetroLib/Source/RetroLibBlueprintNodes/: RetroLibBlueprintNodes.Build.cs
Plugins/Utilities/RetroLib/Source/RetroLibEditor/Public/: RetroLibEditor.h
Plugins/Utilities/RetroLib/Source/RetroLibTests/: CMakeLists.txt
Plugins/Utilities/RetroLib/Source/RetroLibTests/Public/: TestAdapter.h
(+476877 files in other folders)
